Finish fixing type spacing

--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-body { font-family: "Helvetica Neue"; margin:0; }
+body { font-family: "Helvetica Neue"; margin:0; width: 320px; }
 h2 { text-align: center; }
 header { text-align: center; }
 
@@ -7,7 +7,7 @@ ul.tabs li { display: inline; padding: 5px; border: 2px solid #efefef; }
 ul.tabs li.active { background: #efefef; }
 
 ul.type { margin: 20px 0 20px; padding: 0; text-align: center; }
-ul.type li { display: inline; float: left; margin-right: 5px; font-size: 13px; }
+ul.type li { display: inline; float: left; margin-left: 7px; font-size: 14px; }
 ul.type label { display: block; }
 #count { clear: both; padding-top: 10px; display: block; }
 
